# family-shopping-list

./: Dockerfile
backend/: Cargo.toml  database.sqlite  requests.http
backend/src/: app_state.rs  family_context.rs  main.rs  make_repo_router.rs  problem_details.rs  repo_endpoint_builder.rs
backend/src/database/: mod.rs  sqlite.rs
backend/src/database/sqlite-migrations/: 0001_name.sql  0002_meta.sql
backend/src/endpoints/: make_repo_router.rs  mod.rs  products.rs  shopping_list.rs  shopping_list_items.rs  shopping_lists.rs  shops.rs
backend/src/endpoints/api/: everything.rs  mod.rs  products.rs  shopping_list_items.rs  shopping_lists.rs  shops.rs
backend/src/model/: meta.rs  mod.rs  product.rs  search.rs  shop.rs  shopping_list.rs  shopping_list_item.rs
backend/src/repository/: mod.rs  product.rs  shopping_list.rs  shopping_list_item.rs
backend/src/repository/sqlite_impl/: mod.rs  product.rs  shop.rs  shopping_list.rs  shopping_list_item.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/pwa/: manifest.json
frontend/src/: LoadingShroud.tsx  main.tsx  model.ts  mui-theme.tsx  react-query.tsx  react-router.tsx  router.tsx  service-worker.ts  uuid.ts
frontend/src/components/: AppIcon.tsx  MainAppBarToolbar.tsx  MainAppDrawerContent.tsx  MainAppLayout.tsx  PageActions.tsx  PageContainer.tsx  PageTitle.tsx  Searchable.tsx
frontend/src/hooks/: snackbar.tsx
frontend/src/service-worker/: register.ts
frontend/src/state/: _createRepo.ts  _createRepo.tsx  _repo.ts  family.ts  family.tsx  fetch.ts  (+6 more)
(+31 files in other folders)
