[package]
name = "family-shop-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["default", "macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.39.3", features = ["full"] }
dotenv = "0.15.0"
async-trait = { version = "0.1.79", features = [] }
anyhow = "1.0.86"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
log = "0.4.22"
env_logger = "0.11.5"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
